--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="collapse navbar-collapse bs-navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="">EVENTS</a></li>
+                    <li><a href="listing.html">EVENTS</a></li>
                     <li><a href="">TRAINERS</a></li>
                     <li><a href="">BLOG</a></li>
                     <li><a href="">GROUPS</a></li>
@@ -363,7 +363,7 @@
                 </div>
             </div>
         </div>
-        <a class="btn-more" href="">SHOW MORE</a>
+        <a class="btn-more" href="listing.html">SHOW MORE</a>
     </div>
 </section>
 <section class="get-app-block">
